objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_DBA2__c</fullName>
        <formula>Account.DBA2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exhibit As / Directory Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_DBA__c</fullName>
        <formula>Account.DBA__c</formula>
        <label>Doing Business As</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <label>Account ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDH_RecordKey__c</fullName>
        <externalId>true</externalId>
        <label>CDH_RecordKey</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ContactGUID__c</fullName>
        <inlineHelpText>Edge reference ID</inlineHelpText>
        <label>ContactGUID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <label>Contact #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_ID__c</fullName>
        <externalId>true</externalId>
        <label>DM_ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Email_Bounced_Date__c</fullName>
        <formula>EmailBouncedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Bounced Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Bounced_Reason__c</fullName>
        <formula>EmailBouncedReason</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Bounced Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Contact_Number__c</fullName>
        <label>External Contact #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hygiene_Status__c</fullName>
        <label>Hygiene Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                    <default>true</default>
                    <label>Prospect</label>
                </value>
                <value>
                    <fullName>Hygiened Prospect</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Undeliverable</fullName>
                </value>
                <value>
                    <fullName>Opted Out</fullName>
                </value>
                <value>
                    <fullName>GDPR Do Not Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ignore_Contact_Duplicate_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ignore Contact Duplicate Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsShowAccountContactCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsShowAccountContactCreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MaillingProvince__c</fullName>
        <inlineHelpText>Use this field if State/Province is not available for this particular country.</inlineHelpText>
        <label>Mailing Province/Region 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_Codes__c</fullName>
        <label>Merge Codes</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nick_Name__c</fullName>
        <label>Nick Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OtherProvince__c</fullName>
        <inlineHelpText>Use this field if State/Province is not available for this particular country.</inlineHelpText>
        <label>Other Province/Region 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Email__c</fullName>
        <label>Other Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone_Ext__c</fullName>
        <label>Phone Ext</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Method__c</fullName>
        <label>Preferred Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cell Phone</fullName>
                </value>
                <value>
                    <fullName>Home Phone</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Office Phone</fullName>
                </value>
                <value>
                    <fullName>Other Email</fullName>
                </value>
                <value>
                    <fullName>Other Phone</fullName>
                </value>
                <value>
                    <fullName>Work Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Contact_ID__c</fullName>
        <label>Primary Contact ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <label>Relationship Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Relationship_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Roles__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A2Z Invoice Contact</fullName>
                </value>
                <value>
                    <fullName>Advertising Contact</fullName>
                </value>
                <value>
                    <fullName>Agency</fullName>
                </value>
                <value>
                    <fullName>Booth Contact</fullName>
                </value>
                <value>
                    <fullName>Contract Contact</fullName>
                </value>
                <value>
                    <fullName>Contract Contact (Secondary)</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Decorator</fullName>
                </value>
                <value>
                    <fullName>Directory Contact</fullName>
                </value>
                <value>
                    <fullName>Distributor Representative</fullName>
                </value>
                <value>
                    <fullName>Exhibitor kit recipient</fullName>
                </value>
                <value>
                    <fullName>Only contact</fullName>
                </value>
                <value>
                    <fullName>Onsite contact</fullName>
                </value>
                <value>
                    <fullName>Sales Contact</fullName>
                </value>
                <value>
                    <fullName>Sponsorship contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Show</label>
        <referenceTo>Show__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SkipAddressValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SkipAddressValidation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>a2z_ContactId__c</fullName>
        <formula>BLANKVALUE( a2z_Contact_ID__c , 'NONE')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>a2z ContactId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>a2z_Contact_ID__c</fullName>
        <description>a2z contact id</description>
        <externalId>true</externalId>
        <label>a2z Contact ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Show__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>First_Name_Email_or_Phone_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>OR(AND(ISBLANK(Phone), 
ISBLANK(Email)), 
ISBLANK(FirstName))&amp;&amp; $Permission.Bypass_Validation_rules_for_Users = False</errorConditionFormula>
        <errorMessage>First Name, Email/Phone fields are required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>State_required_for_specific_Countries</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
   AND($User.Email &lt;&gt; 'salesforce@emeraldexpo.com',
         SkipAddressValidation__c = FALSE)
   ,
OR(
ISPICKVAL(MailingCountryCode,'US'),
ISPICKVAL(MailingCountryCode,'CA')
),
(NOT ISBLANK(MailingStreet)),
(NOT ISBLANK(MailingCity)),
ISBLANK(TEXT(MailingStateCode))
)&amp;&amp; $Permission.Bypass_Validation_rules_for_Users = False</errorConditionFormula>
        <errorDisplayField>MailingState</errorDisplayField>
        <errorMessage>State/Province is required for US or Canadian address</errorMessage>
    </validationRules>
</CustomObject>